style.css
@import url(https://fonts.googleapis.com/css?family=Montserrat);
body {
  position: relative;
  width: 100%;
  height: 100vh;
  font-family: Montserrat;
}

.wrap {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
          transform: translate(-50%, -50%);
}

.text {
  color: #fbae17;
  display: inline-block;
  margin-left: 5px;
}

.bounceball1 {
  position: relative;
  display: inline-block;
  height: 37px;
  width: 15px;
}
.bounceball1:before {
  position: absolute;
  content: '';
  display: block;
  top: 0;
  width: 15px;
  height: 15px;
  border-radius: 50%;
  background-color: #fbae17;
  -webkit-transform-origin: 50%;
          transform-origin: 50%;
  -webkit-animation: bounce 500ms alternate infinite ease;
          animation: bounce 500ms alternate infinite ease;
  animation-delay: 0s;
}

.bounceball2 {
  position: relative;
  display: inline-block;
  height: 37px;
  width: 15px;
}
.bounceball2:before {
  position: absolute;
  content: '';
  display: block;
  top: 0;
  width: 15px;
  height: 15px;
  border-radius: 50%;
  background-color: #fbae17;
  -webkit-transform-origin: 50%;
          transform-origin: 50%;
  -webkit-animation: bounce2 500ms alternate infinite ease;
          animation: bounce2 500ms alternate infinite ease;
  animation-delay: 0s;
}

.bounceball3 {
  position: relative;
  display: inline-block;
  height: 37px;
  width: 15px;
}
.bounceball3:before {
  position: absolute;
  content: '';
  display: block;
  top: 0;
  width: 15px;
  height: 15px;
  border-radius: 50%;
  background-color: #fbae17;
  -webkit-transform-origin: 50%;
          transform-origin: 50%;
  -webkit-animation: bounce 500ms alternate infinite ease;
          animation: bounce 500ms alternate infinite ease;
  animation-delay: 0s;
}

.bounceball4 {
  position: relative;
  display: inline-block;
  height: 37px;
  width: 15px;
}
.bounceball4:before {
  position: absolute;
  content: '';
  display: block;
  top: 0;
  width: 15px;
  height: 15px;
  border-radius: 50%;
  background-color: #fbae17;
  -webkit-transform-origin: 50%;
          transform-origin: 50%;
  -webkit-animation: bounce 500ms alternate infinite ease;
          animation: bounce 500ms alternate infinite ease;
  animation-delay: 0s;
}

@-webkit-keyframes bounce1 {
  0% {
    top: 30px;
    height: 5px;
    border-radius: 60px 60px 20px 20px;
    -webkit-transform: scaleX(2);
            transform: scaleX(2);
  }
  35% {
    height: 15px;
    border-radius: 50%;
    -webkit-transform: scaleX(1);
            transform: scaleX(1);
  }
  100% {
    top: 0;
  }
}

@keyframes bounce1 {
  0% {
    top: 30px;
    height: 5px;
    border-radius: 60px 60px 20px 20px;
    -webkit-transform: scaleX(2);
            transform: scaleX(2);
  }
  35% {
    height: 15px;
    border-radius: 50%;
    -webkit-transform: scaleX(1);
            transform: scaleX(1);
  }
  100% {
    top: 0;
  }
}

@-webkit-keyframes bounce2 {
  0% {
    top: 0;
  }
  65% {
    top: 30px;
    height: 5px;
    border-radius: 60px 60px 20px 20px;
    -webkit-transform: scaleX(2);
            transform: scaleX(2);
  }
  100% {
    height: 15px;
    border-radius: 50%;
    -webkit-transform: scaleX(1);
            transform: scaleX(1);
  }
}

@keyframes bounce2 {
  0% {
    top: 0;
  }
  65% {
    top: 30px;
    height: 5px;
    border-radius: 60px 60px 20px 20px;
    -webkit-transform: scaleX(2);
            transform: scaleX(2);
  }
  100% {
    height: 15px;
    border-radius: 50%;
    -webkit-transform: scaleX(1);
            transform: scaleX(1);
  }
}


@-webkit-keyframes bounce {
  0% {
    top: 30px;
    height: 5px;
    border-radius: 60px 60px 20px 20px;
    -webkit-transform: scaleX(2);
            transform: scaleX(2);
  }
  35% {
    height: 15px;
    border-radius: 50%;
    -webkit-transform: scaleX(1);
            transform: scaleX(1);
  }
  100% {
    top: 0;
  }
}

@keyframes bounce {
  0% {
    top: 30px;
    height: 5px;
    border-radius: 60px 60px 20px 20px;
    -webkit-transform: scaleX(2);
            transform: scaleX(2);
  }
  35% {
    height: 15px;
    border-radius: 50%;
    -webkit-transform: scaleX(1);
            transform: scaleX(1);
  }
  100% {
    top: 0;
  }
}


@-webkit-keyframes bounce {
  0% {
    top: 30px;
    height: 5px;
    border-radius: 60px 60px 20px 20px;
    -webkit-transform: scaleX(2);
            transform: scaleX(2);
  }
  35% {
    height: 15px;
    border-radius: 50%;
    -webkit-transform: scaleX(1);
            transform: scaleX(1);
  }
  100% {
    top: 0;
  }
}

@keyframes bounce {
  0% {
    top: 30px;
    height: 5px;
    border-radius: 60px 60px 20px 20px;
    -webkit-transform: scaleX(2);
            transform: scaleX(2);
  }
  35% {
    height: 15px;
    border-radius: 50%;
    -webkit-transform: scaleX(1);
            transform: scaleX(1);
  }
  100% {
    top: 0;
  }
}

.wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 200px
}

.wrapper2 {
  display: flex;
  justify-content: center;
  margin-right: 36px
}

.fruitwrapper {
  position: relative;
}

.tomato {
  width: 24px;
  height: 20px;
  border-radius: 11px;
  margin: 0 10px;
  position: absolute;
  
  animation: 800ms bounce5 ease infinite;
}

.stem {
  width: 8px;
  height: 4px;
  border-radius: 11px;
  margin: 0 18px;
  position: absolute;

  animation: 800ms bounce5 ease infinite;
}

.potato1 {
  width: 20px;
  height: 26px;
  border-radius: 11px;
  margin: 0 10px;
  transform: rotate(15deg);
  position: relative;
  
  animation: 800ms bounce5 ease infinite;
}

.leavelater {
  animation-delay: 1s;
  animation: 1s moveright ease infinite;
}

.potato2 {
  width: 20px;
  height: 26px;
  border-radius: 11px;
  margin: 0 52px;
  transform: rotate(-15deg);
  position: relative;
  
  animation: 800ms bounce5 ease infinite;
}

.blue {
  background-color: #4285F5;
}

.red {
  background-color: #EA4436;
  animation-delay: 0s;
}

.yellow {
  background-color: #FBBD06;
  animation-delay: 0s;
}

.green {
  background-color: #34A952;
  animation-delay: 0s;
}

@keyframes bounce5 {  
    50% {
        transform: translateY(25px);
    }
}

@keyframes moveright {  
  100% {
      transform: translateX(500px);
  }
}

